--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "Was ist Zukunftsoekonomie?"
+  title: "Was ist Zukunftsökonomie?"
   author: "Prof. Dr. Jan S. Voßwinkel"
   # date: "18.3.2024
   subtitle: "Sommersemester 2024"
